# caldev

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml  build_test.yml
cmake/: functions.cmake
rebol/: feature.r  p_owasp.r  vid.r
src/: .bazelrc  BUILD  BUILD.bazel  caldev.h.in
src/api/: CMakeLists.txt  api.cpp  api.h  export.h
src/api/imp/: apiconst.h  apiface.h  apiimp.cpp  apiimp.h
src/api/rebol/: rebol2.cpp  rebol2.h
src/api/rebol/imp/: rebol2imp.cpp  rebol2imp.h
src/bindings/: common.h
src/bindings/rebol2/: caldev.r  lib.r
src/bindings/rebol2/cpp/: base.h  default.cpp  default.h  draw.h  edge.h  effect.h  face.h  faceapi.h  font.cpp  font.h  ids.h  none.h  para.h
src/examples/c++/: demo_gui.cpp
src/examples/rebol2/: demo_gui.r
src/internal/: CMakeLists.txt
src/internal/errors/: errors.h
src/internal/gui/: basewidget.h  irender.h  iresize.h  iwidget.h  iwidgetfactory.h  iwindow.h  renderer.cpp  renderer.h  resize.cpp  resize.h  widgetfactory.cpp  widgetfactory.h  window.cpp  window.h
src/internal/gui/imgui/: common.cpp  common.h  window.cpp  window.h
src/internal/gui/layout/cell/: cell.cpp  cell.h  cellcanvas.h  cellelem.h  cells.cpp  cells.h  celltype.h  icell.h
src/internal/gui/layout/format/: alignment.h  format.h
src/internal/gui/render/: renderbuffer.cpp  renderbuffer.h  renderbuffering.cpp  renderbuffering.h  renderstage.cpp  renderstage.h
src/internal/gui/storage/: basewidgetstorage.h  iwidgetstorage.h  widgetstorage.cpp  widgetstorage.h  windowstorage.cpp  windowstorage.h
src/internal/gui/widgets/: area.cpp  area.h  button.cpp  button.h  checkbox.cpp  checkbox.h  combo.cpp  combo.h  field.cpp  field.h  image.cpp  image.h  label.cpp  label.h  radio.cpp  radio.h
src/internal/gui/widgets/queue/: command.cpp  command.h  storage.cpp  storage.h
src/internal/os/: barrier.cpp  barrier.h  ibarrier.h  imutex.h  ithread.h  iutil.h  lock_guard.h  mutex.cpp  mutex.h  thread.cpp  thread.h  util.cpp  util.h
src/internal/os/linux/: barrier.cpp  barrier.h  mutex.cpp  mutex.h  thread.cpp  thread.h  util.cpp  util.h
src/internal/os/windows/: barrier.cpp  barrier.h  mutex.cpp  mutex.h  thread.cpp  thread.h  util.cpp  util.h
src/internal/tools/: logic.cpp  logic.h  paramstream.h  safemap.h
src/modules/: CMakeLists.txt
src/modules/gui/: glfwgui.h  igui.h  opengl.cpp  opengl.h
src/tests/: CMakeLists.txt
src/tests/api/: test_api.cpp
src/tests/bindings/python/: test-gui.py
src/tests/bindings/rebol2/: test-gui.r  tests.r
src/tests/internal/gui/: test_opengl.cpp  test_storage.cpp
src/tests/internal/os/: test_opengl.cpp  test_sync.cpp
src/toolchain/: BUILD.bazel  cc_toolchain_config_g++.bzl
