load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")


config_setting(
    name = "x86_windows",
    values = { "cpu": "x64_x86_windows" }
)
COPTS_WINDOWS = [
    "-DOS_WINDOWS",
    "-std:c++17",
]
SRCS_EXCLUDE_WINDOWS = glob([
    "internal/**/*.h",
    "internal/**/*.cpp",
], exclude=["internal/os/linux/**"])
SRCS = glob([
        "api/**",
        "modules/**/*.h",
        "modules/**/*.cpp",
        "bindings/**/*.h",
        "bindings/**/*.cpp",
    ]) + select({
        "@bazel_tools//src/conditions:windows": SRCS_EXCLUDE_WINDOWS,
        ":x86_windows": SRCS_EXCLUDE_WINDOWS,
        "//conditions:default": glob([
            "internal/**/*.h",
            "internal/**/*.cpp",
        ], exclude=["internal/os/windows/**"])
    })
COPTS = [
        "-I.",
        "-Iextern/glfw/include",
        "-Iextern/imgui",
        "-Iextern/imgui/examples",
    ] + select({
        "@bazel_tools//src/conditions:windows": COPTS_WINDOWS,
        ":x86_windows": COPTS_WINDOWS,
        "@bazel_tools//src/conditions:darwin": [
            "-DOS_MACOS",
            "-std=c++17",
        ],
        "//conditions:default": [
            "-DOS_LINUX",
            "-std=c++17",
        ]
    })
LIBS_WINDOWS = [
    "user32.lib", "gdi32.lib", "shell32.lib", "opengl32.lib",
]

cc_library(
    name = "rebosdklib",
    srcs = SRCS,
    copts = COPTS,
    deps = select({
        "@bazel_tools//src/conditions:darwin": [
            "//extern/glfw:glfw_",
        ],
        "//conditions:default": [
            "//extern/glfw:glfw",
        ],
    }) + [
        "//extern/imgui:imgui",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "rebosdk",
    srcs = SRCS,
    copts = COPTS,
    linkshared = True,
    deps = [":rebosdklib"],
    linkopts = select({
        "@bazel_tools//src/conditions:windows": LIBS_WINDOWS,
        ":x86_windows": LIBS_WINDOWS,
        "@bazel_tools//src/conditions:darwin": [
            "-ldl", "-lpthread", "-framework Foundation -framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo"
        ],
        "//conditions:default": [
            "-ldl", "-lpthread", "-lGL"
        ]
    }),
)

cc_test(
    name = "unittests",
    srcs = SRCS + glob([
        "tests/**/*.cpp",
        "tests/**/*.h",
    ]),
    copts = [
        "-Iextern/googletest/googletest/include",
        "-I.",
    ] + COPTS,
    deps = [
        "//extern/googletest:gtest_main",
        ":rebosdklib",
    ],
)